http://www.springframework.org/osgi

Changes in version 1.0 final (2008-01-1x)
-----------------------------------------

Package org.springframework.osgi.test
* Removed deprecated mispelled Platforms#KNOPFLEFISH constant

Package org.springframework.osgi.util
* OsgiServiceUtils#getAllServices() deprecated method has been removed
* OsgiServiceUtils#getService() deprecated method has been removed

Changes in version 1.0 RC2 (2008-01-11)
---------------------------------------

General
* Removed deprecated methods
* Circular references between service importers, exporter and listeners are now supported
* Distributable bundles include Apache 2 license (META-INF/license.txt and META-INF/notice.txt)
* All integration tests have been moved under integration-test/ folder
* By default, the samples and integration tests are not executed (use Maven profiles to include them)
* Maven 2.0.7 is required for properly building the project under JDK 1.6
* Knopflerfish 2.0.3 is required for correctly building and running Spring-DM

Package org.springframework.osgi
* Updated spring-osgi.xsd Tservice type to properly reflect OsgiServiceFactoryBean package
* Updated spring-osgi.xsd list, set elements to properly reflect OsgiServiceCollectionFactoryBean package               

* Updated bundles symbolic name to follow Spring bundle conventions (org.springframework.bundle.osgi
  instead of org.springframework.osgi.bundle)

Package org.springframework.osgi.bundle
* Removed deprecated method BundleFactoryBean#setClassloader

Package org.springframework.osgi.config
* OsgiConfigDefinitionParser visibility changed from public to default
* OsgiDefaultsDefinition visibility changed from public to default
* ParserUtils visibility changed from public to default

Package org.springframework.osgi.context
* AbstractDelegatedExecutionApplicationContext throws clearer exception when the mandatory BundleContext is not set

Package org.springframework.osgi.extender